# flightdeals

./: .gitignore  README.md  pyproject.toml
flightdeals/: errors.py
flightdeals/scraper/: chromium.py  constants.py  extract.py  form.py  models.py  page_utils.py  parse.py  patterns.py  scraper.py  utils.py
