[project]
name = "flightdeals"
version = "0.1.0"
description = "Scrape Google Flights for cheap nonstop, carry-on flights and alert on deals"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.61.0",
    "pydantic>=2.13.4",
]

[project.scripts]
flightdeals = "flightdeals.scraper.scraper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flightdeals"]
